--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
           var jam = hari.getHours();
           if (jam >= 0 && jam < 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Pagi Sayang!</h1><p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat dan yang aku ingat hanya kamu. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Pagi Sayang!</h1><p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat dan yang aku ingat hanya kamu.</h1><p class='isiucapan'>Aku butuh kamu seperti jantung membutuhkan detik. Aku menginginkanmu seperti gurun pasir
+            yang mengharapkan hujan</h1><p class='isiucapan'>Aku Menyayangimu bukan karena siapa dirimu melainkan apa yang terjadi saat aku
+            bersamamu.</h1><p class='isiucapan'>Aku selalu berharap untuk dapat hadir di setiap mimpi indahmu. Kemudian, aku akan
+            mengatakan bahwa aku akan selalu merindukanmu. i love you sayang <3<p>"
             );
           } else if (jam == 12) {
             document.write(
