--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
       if (hour >= 0 && hour < 12) {
         container.innerHTML = `
           <h3 class="text-2xl font-semibold text-pink-700">Selamat Pagi Sayang!</h3>
-          <p>Aku membuka mata setiap harinya, yang ingin aku lihat dan yang aku ingat hanya kamu.</p>
-          <p class="font-semibold mt-4">I love you sayang &lt;3</p>
+          <p>Saat aku membuka mata setiap harinya, yang ingin aku lihat dan yang aku ingat hanya kamu.</p>
         `;
       } else if (hour === 12) {
         container.innerHTML = `
