--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </h2>
       <img alt="Romantic couple silhouette holding hands at sunset on a beach with warm orange and pink sky" class="rounded-xl w-full object-cover mb-5" height="400" loading="lazy" src="https://storage.googleapis.com/a1aa/image/6b698ccf-1eff-42da-ce4f-682ab4952f8f.jpg" width="600"/>
       <p class="text-pink-600 text-lg leading-relaxed">
-       Aku butuh kamu seperti jantung membutuhkan detik. Aku
+       Aku butuh kamu seperti jantung yang membutuhkan detik. Aku
             menginginkanmu seperti gurun pasir yang mengharapkan hujan.
       </p>
      </section>
@@ -100,7 +100,7 @@
       <img alt="Heart shaped clouds floating in a bright blue sky with soft sunlight" class="rounded-xl w-full object-cover mb-5" height="400" loading="lazy" src="https://storage.googleapis.com/a1aa/image/8181b222-a5e2-4ba3-17e7-92bc1af405ce.jpg" width="600"/>
       <p class="text-pink-600 text-lg leading-relaxed">
        Aku Menyayangimu bukan karena siapa dirimu melainkan apa
-            yang terjadi saat aku bersamamu.
+            yang telah terjadi saat aku bersamamu.
       </p>
      </section>
      <!-- Page 3 -->
@@ -110,9 +110,9 @@
       </h2>
       <img alt="Starry night sky with silhouette of couple looking at stars, romantic and peaceful" class="rounded-xl w-full object-cover mb-5" height="400" loading="lazy" src="https://storage.googleapis.com/a1aa/image/28e1366a-c61b-4702-4278-c2855f730cb4.jpg" width="600"/>
       <p class="text-pink-600 text-lg leading-relaxed">
-       Aku selalu berharap untuk dapat hadir di setiap mimpi
-            indahmu. Kemudian, aku akan mengatakan bahwa aku akan selalu merindukanmu🤗🥰.
-            <p class="font-semibold mt-4">I love you sayang &lt;3</p>
+       Aku selalu berharap untuk dapat hadir di setiap mimpi²
+            indahmu. Kemudian, aku akan mengatakan bahwa aku akan selalu merindukanmu.
+            <p class="font-semibold mt-4">I love you sayang &lt;3🤗🥰</p>
       </p>
      </section>
     </div>
